--- a/about.html
+++ b/about.html
@@ -87,17 +87,7 @@
                 <a href="about.html" class="nav-item nav-link active">About</a>
                 <a href="service.html" class="nav-item nav-link">Service</a>
                 <a href="project.html" class="nav-item nav-link">Project</a>
-                <!--<div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu fade-up m-0">
-                        <a href="feature.html" class="dropdown-item">Feature</a>
-                        <a href="quote.html" class="dropdown-item">Free Quote</a>
-                        <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
-                    </div>
-                </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>-->
+                
             </div>
             <a href="contact.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Contact us<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
@@ -197,7 +187,7 @@
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white" style="width: 60px; height: 60px;">
                                         <!--<i class="fa fa-users fa-2x text-primary"></i>-->
-                                        <img src="img/edgeti-icon.png" width="40px">
+                                        <a href="https://edgeti.com/"><img src="img/edgeti-icon.png" width="40px"></a>
                                     </div>
                                     <div class="ms-3">
                                         <!--<h2 class="text-primary mb-1" data-toggle="counter-up">1234</h2>-->
@@ -208,7 +198,7 @@
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white" style="width: 60px; height: 60px;">
-                                        <img src="img/parasoft-icon.png" width="40px">
+                                        <a href="https://www.parasoft.com/"><img src="img/parasoft-icon.png" width="40px"></a>
                                         <!--<i class="fa fa-check fa-2x text-primary"></i>-->
                                     </div>
                                     <div class="ms-3">
